--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <title>Data Layer Test</title>
   <script id="usercentrics-cmp" data-settings-id="YOUR-SETTINGS-ID" src="https://app.usercentrics.eu/browser-ui/latest/bundle.js" defer></script>
   <script type="application/javascript" src="https://app.usercentrics.eu/latest/main.js" id="TpiFPuphU"></script>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-NP8BCLP');</script>
+  <!-- End Google Tag Manager -->
 </head>
 
 <body>
@@ -12,4 +19,8 @@
 this is my personal cmp test...
 
 </body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NP8BCLP"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 </html>
