--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- End Google Tag Manager -->
   <meta charset="UTF-8">
   <title>Data Layer Test</title>
-  <script id="usercentrics-cmp" data-settings-id="YOUR-SETTINGS-ID" src="https://app.usercentrics.eu/browser-ui/latest/bundle.js" defer></script>
+  <script id="usercentrics-cmp" data-settings-id="TpiFPuphU" src="https://app.usercentrics.eu/browser-ui/latest/bundle.js" defer></script>
   <script type="application/javascript" src="https://app.usercentrics.eu/latest/main.js" id="TpiFPuphU"></script>
 </head>
 
