--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
         // Enable ads data redaction by default [optional]
         gtag("set", "ads_data_redaction", true);
-    </script>
+      </script>
 
-    <script type="text/javascript">
+      <script type="text/javascript">
         // Google Tag Manager
         (function(w, d, s, l, i) {
             w[l] = w[l] || [];
@@ -35,8 +35,39 @@
                 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
             f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-NP8BCLP'); //replace GTM-XXXXXX with Google Tag Manager ID
-    </script>
+      </script>
+      
+      <script type="text/javascript">
+      window.addEventListener("ucEvent", function (e) {
+      if( e.detail && e.detail.event == "consent_status") {
+        // check for consent status of service "Google Analytics"    
+        var ucAnalyticsService = 'Google Analytics';
+        // check for consent status of service "Google Ads Remarketing" 
+        var ucAdService = 'Google Ads Remarketing'; 
 
+        if(e.detail.hasOwnProperty(ucAnalyticsService) && e.detail.hasOwnProperty(ucAdService))
+        {
+            gtag("consent", "update", {
+                ad_storage: e.detail[ucAdService] ? 'granted':'denied',
+                analytics_storage: e.detail[ucAnalyticsService] ? 'granted':'denied'
+            });
+        }
+        else {            
+            if(e.detail.hasOwnProperty(ucAdService)) {
+                gtag("consent", "update", {
+                    ad_storage: e.detail[ucAdService] ? 'granted':'denied'
+                });
+            }            
+            if(e.detail.hasOwnProperty(ucAnalyticsService)) {
+              gtag("consent", "update", {
+                    analytics_storage: e.detail[ucAnalyticsService] ? 'granted':'denied'
+                });
+            }
+        }
+      }
+      });
+      </script>
+  
   
   
   <meta charset="UTF-8">
