--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             j.src =
                 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
             f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-XXXXX'); //replace GTM-XXXXXX with Google Tag Manager ID
+        })(window, document, 'script', 'dataLayer', 'GTM-NP8BCLP'); //replace GTM-XXXXXX with Google Tag Manager ID
     </script>
 
 </head>
